JQuery-Full 1.11.2~core2

	* Upgrade icheck to latest upstream version, 2.0.0.
	* Repackage a number of components to fix a minor packaging bug.
	-- Charlie Powell <charlie@eval.bz>  Thu, 22 Jan 2015 00:46:35 -0500

JQuery-Full 1.11.2~core1

	* Include jqueryUI Touch Punch by default with jQuery UI to add support for touch devices.
	* Upgrade the bundled versions of jQuery to 2.1.1 and jQueryUI to 1.11.2
	* New version of mimimalect.
	* Include the minified version of minimalect.
	* Changed minimalect to not explicitly use minified version...which wasn't actually minified to begin
	  with ^_^
	-- Charlie Powell <charlie@eval.bz>  Mon, 24 Nov 2014 23:01:17 -0500

JQuery-Full 1.11.0~core1

	* minimalect shouldn't hide the default option on selects
	* Fancy checkboxes and radios. Fully accessible and degrades nicely
	* compile/component fun.
	* Upgrade jQueryUI to 1.10.4 and jQuery to 1.11.0.
	-- Charlie Powell <charlie@eval.bz>  Sat, 22 Mar 2014 15:00:20 -0400

JQuery-Full 1.10.2~core4

	* Bump copyright date to 2014.
	-- Charlie Powell <charlie@eval.bz>  Thu, 02 Jan 2014 11:19:18 -0500

JQuery-Full 1.10.2~core3

	* [Feature] added in the sticky waypoints plugin
	-- Charlie Powell <charlie@eval.bz>  Mon, 30 Sep 2013 00:05:21 -0400

JQuery-Full 1.10.2~core2

	* Make use of the namespace versions of View instead of static.
	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 17:37:26 -0400

JQuery-Full 1.10.2~core1

	* New upstream version of jquery, 1.10.2
	* New upstream version of jquery waypoints (2.0.3)
	* Forgot the version update on jquery-full.
	-- Charlie Powell <charlie@eval.bz>  Tue, 06 Aug 2013 20:19:57 -0400

JQuery-Full 1.10.0~core1

	* Updated jquery to newest upstream version.
	* Updated jquery-ui to newest upstream version.
	-- Charlie Powell <charlie@eval.bz>  Sat, 01 Jun 2013 15:50:29 -0400

JQuery-Full 1.9.1~core3

	* [Feature] added waypoints shortcuts

JQuery-Full 1.9.1~core2

	* [Feature] added jquery.smooth-scroll asset and library
