@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE component PUBLIC "SYSTEM" "http://corepl.us/api/2_4/component.dtd">
-<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.11.2~core2" name="JQuery-Full" execmode="web">
+<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.11.4~core1" name="JQuery-Full" execmode="web">
 	<requires>
 		<require name="core" type="component" version="3.5.0" operation="ge"/>
 	</requires>
@@ -40,33 +40,33 @@
 		<file filename="assets/css/images/animated-overlay.gif" md5="2b912f7c0653008ca28ebacda49025e7"/>
 		<file filename="assets/css/images/flat.png" md5="2176d6d6e814b0da1c71b73ca7a675e8"/>
 		<file filename="assets/css/images/flat@2x.png" md5="0fd2837df39867a90c7a6fca9ca6fe6e"/>
-		<file filename="assets/css/images/ui-bg_diagonals-thick_18_b81900_40x40.png" md5="95f9cceeb9d742dd3e917ec16ed754f8"/>
-		<file filename="assets/css/images/ui-bg_diagonals-thick_20_666666_40x40.png" md5="f040b255ca13e693da34ab33c7d6b554"/>
+		<file filename="assets/css/images/ui-bg_diagonals-thick_18_b81900_40x40.png" md5="e460a66d4b3e093fc651e62a236267cb"/>
+		<file filename="assets/css/images/ui-bg_diagonals-thick_20_666666_40x40.png" md5="4429d568c67d8dfeb9040273ea0fb8c4"/>
 		<file filename="assets/css/images/ui-bg_flat_0_aaaaaa_40x100.png" md5="6250e15589bac28842a11e70d1aa6f94"/>
-		<file filename="assets/css/images/ui-bg_flat_10_000000_40x100.png" md5="c18cd01623c7fed23c80d53e2f5e7c78"/>
+		<file filename="assets/css/images/ui-bg_flat_10_000000_40x100.png" md5="530ddcddef2ee2e551cac395c91861fa"/>
 		<file filename="assets/css/images/ui-bg_flat_75_ffffff_40x100.png" md5="d2f6dd3ec2712648219c50d557f57178"/>
-		<file filename="assets/css/images/ui-bg_glass_100_f6f6f6_1x400.png" md5="4560b9efbc889572de9d97c9ffa04106"/>
-		<file filename="assets/css/images/ui-bg_glass_100_fdf5ce_1x400.png" md5="d26e8f463195a7b86f86b7d550cfc114"/>
+		<file filename="assets/css/images/ui-bg_glass_100_f6f6f6_1x400.png" md5="592a83ce3108a09166a8091da1e71715"/>
+		<file filename="assets/css/images/ui-bg_glass_100_fdf5ce_1x400.png" md5="50e5db5c04ae94a0e4b168965eb2c4cf"/>
 		<file filename="assets/css/images/ui-bg_glass_55_fbf9ee_1x400.png" md5="3faa91eae76b41f9b35ee69d88dfcd4e"/>
 		<file filename="assets/css/images/ui-bg_glass_55_fcf0ba_1x400.png" md5="e8fa5df505b503a945e543c5816179ca"/>
-		<file filename="assets/css/images/ui-bg_glass_65_ffffff_1x400.png" md5="609cf2f95f89da6f8b89ee78865513b0"/>
+		<file filename="assets/css/images/ui-bg_glass_65_ffffff_1x400.png" md5="8adce377e6c1729831d8719a227a1ec4"/>
 		<file filename="assets/css/images/ui-bg_glass_75_dadada_1x400.png" md5="d8d975e9a56670b187d9b31a9e114f8d"/>
 		<file filename="assets/css/images/ui-bg_glass_75_e6e6e6_1x400.png" md5="02dd09f3963eaeb70344a7a859057018"/>
 		<file filename="assets/css/images/ui-bg_glass_95_fef1ec_1x400.png" md5="da135b78e22f5bf66a95a7837c1cda92"/>
 		<file filename="assets/css/images/ui-bg_gloss-wave_100_ece8da_500x100.png" md5="dccd449740f6fd2a875fc72ef3586b53"/>
-		<file filename="assets/css/images/ui-bg_gloss-wave_35_f6a828_500x100.png" md5="58d2cd501e01573cf537089c694ba899"/>
+		<file filename="assets/css/images/ui-bg_gloss-wave_35_f6a828_500x100.png" md5="17e9f57eb8b51f9256f29568af2f75c9"/>
 		<file filename="assets/css/images/ui-bg_highlight-hard_100_f5f3e5_1x100.png" md5="c3341f3735d126758336bda6f1b21ec4"/>
 		<file filename="assets/css/images/ui-bg_highlight-hard_100_fafaf4_1x100.png" md5="5fab734991bc927dd729e4b2c4500a34"/>
 		<file filename="assets/css/images/ui-bg_highlight-hard_15_459e00_1x100.png" md5="f5613fb05e1c5ae3bd9167d85d1d72a7"/>
-		<file filename="assets/css/images/ui-bg_highlight-soft_100_eeeeee_1x100.png" md5="384c3f17709ba0f809b023b6e7b10b84"/>
+		<file filename="assets/css/images/ui-bg_highlight-soft_100_eeeeee_1x100.png" md5="a53d88060dc86e0fad98083f9aa21486"/>
 		<file filename="assets/css/images/ui-bg_highlight-soft_25_67b021_1x100.png" md5="bdfc7094828e60a1e89799619382589a"/>
 		<file filename="assets/css/images/ui-bg_highlight-soft_75_cccccc_1x100.png" md5="44ef42c1bc1ff7c8cd485b0b193135a1"/>
-		<file filename="assets/css/images/ui-bg_highlight-soft_75_ffe45c_1x100.png" md5="b806658954cb4d16ade8977af737f486"/>
+		<file filename="assets/css/images/ui-bg_highlight-soft_75_ffe45c_1x100.png" md5="da532226b8a134afef1ac143ca0a3fce"/>
 		<file filename="assets/css/images/ui-bg_highlight-soft_95_ffedad_1x100.png" md5="7103bea11984ecc1ebce02dcc10cdc75"/>
 		<file filename="assets/css/images/ui-bg_inset-soft_95_cccccc_1x100.png" md5="df2dbcfe9af96aacfe13e53b108aaf5b"/>
 		<file filename="assets/css/images/ui-bg_spotlight_80_6f6b5d_600x600.png" md5="70e145838be2f61b981cd2ecfb1cd6ab"/>
-		<file filename="assets/css/images/ui-icons_222222_256x240.png" md5="a1b3887a86cf1791f23c0b53b4d3585f"/>
-		<file filename="assets/css/images/ui-icons_228ef1_256x240.png" md5="79f41c0765e9ec18562b20b0801d748b"/>
+		<file filename="assets/css/images/ui-icons_222222_256x240.png" md5="3a3c5468f484f07ac4a320d9e22acb8c"/>
+		<file filename="assets/css/images/ui-icons_228ef1_256x240.png" md5="92b29683b6a48eae7de7eb4b1cfa039c"/>
 		<file filename="assets/css/images/ui-icons_2e83ff_256x240.png" md5="764c37efbf6d7ffc176b466fadc6f2ca"/>
 		<file filename="assets/css/images/ui-icons_454545_256x240.png" md5="6b29e362591a05e270b33c4fc3f67cb2"/>
 		<file filename="assets/css/images/ui-icons_808080_256x240.png" md5="285708190686f9ee7a48a988a0eed090"/>
@@ -75,9 +75,9 @@
 		<file filename="assets/css/images/ui-icons_8dc262_256x240.png" md5="4128e64e48bfc9c6e5ab45f29bb32da7"/>
 		<file filename="assets/css/images/ui-icons_cd0a0a_256x240.png" md5="5c78585b80fbf4342d21674a04e89c8b"/>
 		<file filename="assets/css/images/ui-icons_eeeeee_256x240.png" md5="2e6d7e1cca1cd751a6e156feb381eb0f"/>
-		<file filename="assets/css/images/ui-icons_ef8c08_256x240.png" md5="ef9a6ccfe3b14041928ddc708665b226"/>
-		<file filename="assets/css/images/ui-icons_ffd27a_256x240.png" md5="ab8c30acc0e3608fb79e01fccf832c70"/>
-		<file filename="assets/css/images/ui-icons_ffffff_256x240.png" md5="342bc03f6264c75d3f1d7f99e34295b9"/>
+		<file filename="assets/css/images/ui-icons_ef8c08_256x240.png" md5="f492970693640894fb54166c75dd2925"/>
+		<file filename="assets/css/images/ui-icons_ffd27a_256x240.png" md5="dda1b6f694b0d196aefc66a1d6d758f6"/>
+		<file filename="assets/css/images/ui-icons_ffffff_256x240.png" md5="41612b0f4a034424f8321c9f824a94da"/>
 		<file filename="assets/css/jquery-ui-1.10.2.custom.css" md5="8c39d8786f4bfbb415f8f724939cdc5f"/>
 		<file filename="assets/css/jquery-ui-1.10.2.custom.min.css" md5="58d6ec84fa8f0eab6c5b5f48d1ae53a6"/>
 		<file filename="assets/css/jquery-ui-1.10.3.custom.css" md5="8bcc71884775417b34423780b4fd8264"/>
@@ -86,31 +86,26 @@
 		<file filename="assets/css/jquery-ui-1.10.4.custom.min.css" md5="d7fdbf6b4f0bd6831fe1b6ca4b701add"/>
 		<file filename="assets/css/jquery-ui-1.11.2.css" md5="0bbc1c4cefe64688f7177848baf72520"/>
 		<file filename="assets/css/jquery-ui-1.11.2.min.css" md5="c3fb533136297b8478b4826d35c2eca0"/>
+		<file filename="assets/css/jquery-ui-1.11.4.css" md5="cc7d25d4acbbd2ffc2f3d9c6c315bb58"/>
+		<file filename="assets/css/jquery-ui-1.11.4.min.css" md5="47880ca822eb35148c5a780ec3a2c416"/>
 		<file filename="assets/css/jquery-ui-1.8.22.css" md5="37aee7c9e30bde3f8d1adc765619b767"/>
 		<file filename="assets/css/jquery-ui-1.9.0.css" md5="7b1117ce0cdc6d0614c1f7b106d69bd6"/>
 		<file filename="assets/css/jquery.icheck.css" md5="a75642d46565de832b31f2d073d25272"/>
 		<file filename="assets/css/jquery.readonly.css" md5="ca07e99b858d310cd3e855abf65d9b06"/>
-		<file filename="assets/js/jquery/jquery-1.10.0.js" md5="7afc740382f2bf4147d8f63850a9c2b9"/>
-		<file filename="assets/js/jquery/jquery-1.10.0.min.js" md5="00ff34b67a328f219fa3ae2423d4f252"/>
-		<file filename="assets/js/jquery/jquery-1.10.2.js" md5="91515770ce8c55de23b306444d8ea998"/>
-		<file filename="assets/js/jquery/jquery-1.10.2.min.js" md5="628072e7212db1e8cdacb22b21752cda"/>
-		<file filename="assets/js/jquery/jquery-1.10.2.min.map" md5="6c3ccfc221d36777d383b6e04d0b8af9"/>
 		<file filename="assets/js/jquery/jquery-1.11.0.js" md5="3b80424646a7ecdb19273d86800c1ac0"/>
 		<file filename="assets/js/jquery/jquery-1.11.0.min.js" md5="8fc25e27d42774aeae6edbc0a18b72aa"/>
 		<file filename="assets/js/jquery/jquery-1.11.0.min.map" md5="88960207dc799796278610d3febe4abb"/>
-		<file filename="assets/js/jquery/jquery-1.9.1.js" md5="08c235d357750c657ac1db7d1cf656a9"/>
-		<file filename="assets/js/jquery/jquery-1.9.1.min.js" md5="397754ba49e9e0cf4e7c190da78dda05"/>
-		<file filename="assets/js/jquery/jquery-2.1.1.js" md5="7403060950f4a13be3b3dfde0490ee05"/>
-		<file filename="assets/js/jquery/jquery-2.1.1.min.js" md5="e40ec2161fe7993196f23c8a07346306"/>
-		<file filename="assets/js/jquery/jquery-2.1.1.min.map" md5="91543d9441aca2e30f9786273d044569"/>
+		<file filename="assets/js/jquery/jquery-2.1.3.js" md5="cf26f8f0ccb06be71e92d8db0fb64ab5"/>
+		<file filename="assets/js/jquery/jquery-2.1.3.min.js" md5="32015dd42e9582a80a84736f5d9a44d7"/>
+		<file filename="assets/js/jquery/jquery-2.1.3.min.map" md5="54fb7b3bd4b6443f87b9916edf490f38"/>
 		<file filename="assets/js/jquery/jquery-ui-1.10.2.custom.js" md5="c913b6b5925699cd1bf4d6aa41082f70"/>
 		<file filename="assets/js/jquery/jquery-ui-1.10.2.custom.min.js" md5="a34697840e5bb92b47a5b28034f19b0f"/>
 		<file filename="assets/js/jquery/jquery-ui-1.10.3.custom.js" md5="387c83ae31050eee0b744c6ea62eaf9e"/>
 		<file filename="assets/js/jquery/jquery-ui-1.10.3.custom.min.js" md5="ae6f04c088d76a69d33c1c954e08fcf0"/>
 		<file filename="assets/js/jquery/jquery-ui-1.10.4.custom.js" md5="c1af2a1f16eab3aa557897e9568775b2"/>
 		<file filename="assets/js/jquery/jquery-ui-1.10.4.custom.min.js" md5="e9a4e8365783a4e3d96f908289f553ec"/>
-		<file filename="assets/js/jquery/jquery-ui-1.11.2.js" md5="b5f3656496ccb995aacdccc0e91437c2"/>
-		<file filename="assets/js/jquery/jquery-ui-1.11.2.min.js" md5="870b75c273a97501e7d1fb27776bafd0"/>
+		<file filename="assets/js/jquery/jquery-ui-1.11.4.js" md5="535c509d4c3ebb2ce7cdbd038a0613c3"/>
+		<file filename="assets/js/jquery/jquery-ui-1.11.4.min.js" md5="40f96bd3d2cb933f9e34062b90b3656f"/>
 		<file filename="assets/js/jquery/jquery.cookie.js" md5="368c829b47c90cddb62256701654d950"/>
 		<file filename="assets/js/jquery/jquery.cookie.min.js" md5="b2b5da3ba885603b0097b9a6bd6b032c"/>
 		<file filename="assets/js/jquery/jquery.form.js" md5="a3aa2838a67b271230e38fb81dfa9748"/>
@@ -136,9 +131,9 @@
 	</assets>
 	<files>
 		<file filename="AUTHORS.txt" md5="062b09043331627683f6b91b0e99daeb"/>
-		<file filename="CHANGELOG" md5="704387bd2c1bcce1f095c13e67b71c79"/>
+		<file filename="CHANGELOG" md5="ac123789c950665cbd4524b35c3f3670"/>
 		<file filename="GPL-LICENSE.txt" md5="2c1778696d3ba68569a0352e709ae6b7"/>
-		<file filename="JQuery.lib.php" md5="1a28010fad97ef0712b04513851a153f">
+		<file filename="JQuery.lib.php" md5="270d6f94f5a3ffeba2d895098e815cb5">
 			<class name="JQuery"/>
 		</file>
 		<file filename="MIT-LICENSE.txt" md5="8d437ebbf8fbfa406e069912b96eaab1"/>
@@ -176,6 +171,7 @@
 		<upgrade from="1.10.2~core4" to="1.11.0~core1"/>
 		<upgrade from="1.11.0~core1" to="1.11.2~core1"/>
 		<upgrade from="1.11.2~core1" to="1.11.2~core2"/>
+		<upgrade from="1.11.2~core2" to="1.11.4~core1"/>
 	</upgrades>
 	<authors>
 		<author name="Charlie Powell" email="charlie@eval.bz"/>
